# ai-engineering-path

./: .gitignore  pyproject.toml
gen-ai-and-llms/03-transformers-and-llms-p1/: metrics_to_evaluate_llms.md  transformers_architectures.md
gen-ai-and-llms/04-transformers-and-llms-p2/: text_generation.ipynb
gen-ai-and-llms/05-prompt-engineering/: prompt_engineering_basics.md  rag_and_chats.ipynb  vector_databases.md
gen-ai-and-llms/06-transfer-learning-fine-tuning-p1/: fine_tuning.md
