[project]
name = "gen-ai-and-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.0",
    "google-genai>=1.57.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.1.3",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
]
